<resources>
    <string name="app_name">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Псевдоним</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="message">Сообщение</string>
    <string name="retry">Попробовать снова</string>
    <string name="notifications_not_arrive">Уведомления не будут приходить</string>
</resources>